--- a/index.html
+++ b/index.html
@@ -10,78 +10,95 @@
 
         <nav>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>Home</li>
+                <li>About</li>
+                <li>Contact</li>
+
+                <li>Sign In</li>
+                <li>Sign Up</li>
             </ul>
         </nav>
 
-        <h1></h1>
-        
-        <p></p>
-        <button></button>
+        <h1>Responsive layouts <span>don't have to be a struggle</span></h1>
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+            sed do eiusmod tempor incididunt et dolore mahna aliqua.</p>
+        <button>I want to learn</button>
 
     </header>
 
     <section class="section-two">
 
-        <h2></h2>
-        <p></p>
+        <h2>Mobile-first</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+            sed do eiusmod tempor incididunt et dolore mahna aliqua. 
+            Ut enim ad minim veniam.</p>
 
-        <h2></h2>
-        <p></p>
+        <h2>Efficient</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+            sed do eiusmod tempor incididunt et dolore mahna aliqua. 
+            Ut enim ad minim veniam.</p>
 
-        <h2></h2>
-        <p></p>
+        <h2>Done right</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+            sed do eiusmod tempor incididunt et dolore mahna aliqua. 
+            Ut enim ad minim veniam.</p>
 
     </section>
 
     <section class="section-three">
 
-        <h2></h2>
-        <p></p>
+        <h2>It doesn't have to be so hard</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+            sed do eiusmod tempor incididunt et dolore mahna aliqua. 
+            Ut enim ad minim veniam.</p>
         <img>
-        <p></p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+            sed do eiusmod tempor incididunt et dolore mahna aliqua. 
+            Ut enim ad minim veniam.</p>
 
-        <h3></h3>
-        <p></p>
-        <h3></h3>
-        <p></p>
-        <h3></h3>
-        <p></p>
+        <h3>Break it down</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+            sed do eiusmod tempor incididunt et dolore mahna aliqua.</p>
+        <h3>Work your way up</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+            sed do eiusmod tempor incididunt et dolore mahna aliqua.</p>
+        <h3>It'll change your life</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+            sed do eiusmod tempor incididunt et dolore mahna aliqua.</p>
 
     </section>
 
     <footer class="footer-section">
 
-        <h4></h4>
+        <h4>just scratching the surface</h4>
         
-        <h5></h5>
-        <p></p>
+        <h5>About our company</h5>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+            sed do eiusmod tempor incididunt et dolore mahna aliqua. 
+            Ut enim ad minim veniam.</p>
 
-        <h5></h5>
+        <h5>Getting around</h5>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Home</li>
+            <li>About</li>
+            <li>Contact</li>
         </ul>
 
-        <h5></h5>
+        <h5>Other things</h5>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Lorem ipsum</li>
+            <li>dolor</li>
+            <li>sit amet</li>
+            <li>consectetur</li>
         </ul>
 
-        <h5></h5>
+        <h5>And more</h5>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Lorem ipsum</li>
+            <li>dolor</li>
+            <li>sit amet</li>
+            <li>consectetur</li>
         </ul>
 
     </footer>
