Inserted logo and image

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <header class="main-section">
 
         <nav>
+            <img src="./logo.svg" alt="conquering responsive layouts logo">
             <ul>
                 <li>Home</li>
                 <li>About</li>
@@ -52,7 +53,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt et dolore mahna aliqua. 
             Ut enim ad minim veniam.</p>
-        <img>
+        <img src="./the-image.jpg" alt="hand-drawn wireframes">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt et dolore mahna aliqua. 
             Ut enim ad minim veniam.</p>
