Started styling and added container divs

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header class="main-section">
-
+        <div class="container">
         <nav>
             <img src="./logo.svg" alt="conquering responsive layouts logo">
             <ul>
@@ -28,11 +28,11 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt et dolore mahna aliqua.</p>
         <button>I want to learn</button>
-
+        </div>
     </header>
 
     <section class="section-two">
-
+        <div class="container">
         <h2>Mobile-first</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt et dolore mahna aliqua. 
@@ -47,11 +47,11 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt et dolore mahna aliqua. 
             Ut enim ad minim veniam.</p>
-
+        </div>
     </section>
 
     <section class="section-three">
-
+        <div class="container">
         <h2>It doesn't have to be so hard</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt et dolore mahna aliqua. 
@@ -70,11 +70,11 @@
         <h3>It'll change your life</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt et dolore mahna aliqua.</p>
-
+        </div>
     </section>
 
     <footer class="footer-section">
-
+        <div class="container">
         <h4>just scratching the surface</h4>
         
         <h5>About our company</h5>
@@ -104,6 +104,6 @@
             <li>sit amet</li>
             <li>consectetur</li>
         </ul>
-
+        </div>  
     </footer>
   </body>
