--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </ul>
         </nav>
 
-        <h1>Responsive layouts <span>don't have to be a struggle</span></h1>
+        <h1 class="heading">Responsive layouts <span>don't have to be a struggle</span></h1>
 
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt et dolore mahna aliqua.</p>
@@ -33,17 +33,17 @@
 
     <section class="section-two">
         <div class="container">
-        <h2>Mobile-first</h2>
+        <h2 class="heading section-two-heading">Mobile-first</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt et dolore mahna aliqua. 
             Ut enim ad minim veniam.</p>
 
-        <h2>Efficient</h2>
+        <h2 class="heading section-two-heading">Efficient</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt et dolore mahna aliqua. 
             Ut enim ad minim veniam.</p>
 
-        <h2>Done right</h2>
+        <h2 class="heading section-two-heading">Done right</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt et dolore mahna aliqua. 
             Ut enim ad minim veniam.</p>
@@ -52,7 +52,7 @@
 
     <section class="section-three">
         <div class="container">
-        <h2>It doesn't have to be so hard</h2>
+        <h2 class="heading">It doesn't have to be so hard</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt et dolore mahna aliqua. 
             Ut enim ad minim veniam.</p>
@@ -61,13 +61,13 @@
             sed do eiusmod tempor incididunt et dolore mahna aliqua. 
             Ut enim ad minim veniam.</p>
 
-        <h3>Break it down</h3>
+        <h3 class="heading">Break it down</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt et dolore mahna aliqua.</p>
-        <h3>Work your way up</h3>
+        <h3 class="heading">Work your way up</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt et dolore mahna aliqua.</p>
-        <h3>It'll change your life</h3>
+        <h3 class="heading">It'll change your life</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt et dolore mahna aliqua.</p>
         </div>
@@ -75,21 +75,21 @@
 
     <footer class="footer-section">
         <div class="container">
-        <h4>just scratching the surface</h4>
+        <h4 class="heading footer-main-heading">just scratching the surface</h4>
         
-        <h5>About our company</h5>
+        <h5 class="heading footer-subheading">About our company</h5>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt et dolore mahna aliqua. 
             Ut enim ad minim veniam.</p>
 
-        <h5>Getting around</h5>
+        <h5 class="heading footer-subheading">Getting around</h5>
         <ul>
             <li>Home</li>
             <li>About</li>
             <li>Contact</li>
         </ul>
 
-        <h5>Other things</h5>
+        <h5 class="heading footer-subheading">Other things</h5>
         <ul>
             <li>Lorem ipsum</li>
             <li>dolor</li>
@@ -97,7 +97,7 @@
             <li>consectetur</li>
         </ul>
 
-        <h5>And more</h5>
+        <h5 class="heading footer-subheading">And more</h5>
         <ul>
             <li>Lorem ipsum</li>
             <li>dolor</li>
