Further styling and added more divs and classes

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
     </section>
 
     <section class="section-three">
-        <div class="container">
+        <div class="container row">
+        <div class="column">
         <h2 class="heading">It doesn't have to be so hard</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt et dolore mahna aliqua. 
@@ -60,35 +61,47 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt et dolore mahna aliqua. 
             Ut enim ad minim veniam.</p>
-
+        </div>
+        <div class="column">
+        <div class="subsection-3">
         <h3 class="heading">Break it down</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt et dolore mahna aliqua.</p>
+        </div>
+        <div class="subsection-3">
         <h3 class="heading">Work your way up</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt et dolore mahna aliqua.</p>
+        </div>
+        <div class="subsection-3">
         <h3 class="heading">It'll change your life</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt et dolore mahna aliqua.</p>
         </div>
+        </div>
+        </div>
     </section>
 
     <footer class="footer-section">
-        <div class="container">
+        <div class="container row">
+        <div class="column">
         <h4 class="heading footer-main-heading">just scratching the surface</h4>
         
         <h5 class="heading footer-subheading">About our company</h5>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt et dolore mahna aliqua. 
             Ut enim ad minim veniam.</p>
-
+        </div>
+        <div class="container">
+        <div class="column">
         <h5 class="heading footer-subheading">Getting around</h5>
         <ul>
             <li>Home</li>
             <li>About</li>
             <li>Contact</li>
         </ul>
-
+        </div>
+        <div class="column">
         <h5 class="heading footer-subheading">Other things</h5>
         <ul>
             <li>Lorem ipsum</li>
@@ -96,7 +109,8 @@
             <li>sit amet</li>
             <li>consectetur</li>
         </ul>
-
+        </div>
+        <div class="column">
         <h5 class="heading footer-subheading">And more</h5>
         <ul>
             <li>Lorem ipsum</li>
@@ -104,6 +118,8 @@
             <li>sit amet</li>
             <li>consectetur</li>
         </ul>
+        </div>
+        </div>
         </div>  
     </footer>
   </body>
