Further layout and typography styling

--- a/index.html
+++ b/index.html
@@ -33,20 +33,24 @@
 
     <section class="section-two">
         <div class="container">
+        <div class="subsection-2">
         <h2 class="heading section-two-heading">Mobile-first</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt et dolore mahna aliqua. 
             Ut enim ad minim veniam.</p>
-
+        </div>
+        <div class="subsection-2">
         <h2 class="heading section-two-heading">Efficient</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt et dolore mahna aliqua. 
             Ut enim ad minim veniam.</p>
-
+        </div>
+        <div class="subsection-2">
         <h2 class="heading section-two-heading">Done right</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt et dolore mahna aliqua. 
             Ut enim ad minim veniam.</p>
+        </div>
         </div>
     </section>
 
