Added link to nav items, and preping nav to become interactive hamburger menu for mobile version

--- a/index.html
+++ b/index.html
@@ -10,43 +10,53 @@
   </head>
   <body>
     <header class="main-section">
-        <div class="container">
-        <nav>
+        <div class="container row">
+            <button class="nav-toggle" aria-label="open navigation">
+                <span class="hamburger"></span>
+            </button>
+            <a class="logo" href="#">
             <img src="./logo.svg" alt="conquering responsive layouts logo">
-            <ul>
-                <li>Home</li>
-                <li>About</li>
-                <li>Contact</li>
-
-                <li>Sign In</li>
-                <li>Sign Up</li>
-            </ul>
+            </a>
+        <nav class="nav">
+                <ul class="nav-list nav-list primary">
+                <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
+                </ul>
+                <ul class="nav-list nav-list-secondary">
+                <li class="nav-item"><a href="#" class="nav-link">Sign In</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Sign Up</a></li>
+                </ul>
+                </ul>
         </nav>
+    </header>
 
+    <section class="hero">
+        <div class="container row">
         <h1 class="heading">Responsive layouts <span>don't have to be a struggle</span></h1>
-
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt et dolore mahna aliqua.</p>
         <button>I want to learn</button>
         </div>
-    </header>
+        </div>
+    </section>
 
     <section class="section-two">
         <div class="container">
-        <div class="subsection-2">
-        <h2 class="heading section-two-heading">Mobile-first</h2>
+        <div class="subsection">
+        <h2 class="subsection-heading section-two-heading">Mobile-first</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt et dolore mahna aliqua. 
             Ut enim ad minim veniam.</p>
         </div>
-        <div class="subsection-2">
-        <h2 class="heading section-two-heading">Efficient</h2>
+        <div class="subsection">
+        <h2 class="subsection-heading section-two-heading">Efficient</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt et dolore mahna aliqua. 
             Ut enim ad minim veniam.</p>
         </div>
-        <div class="subsection-2">
-        <h2 class="heading section-two-heading">Done right</h2>
+        <div class="subsection">
+        <h2 class="subsection-heading section-two-heading">Done right</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt et dolore mahna aliqua. 
             Ut enim ad minim veniam.</p>
@@ -57,7 +67,7 @@
     <section class="section-three">
         <div class="container row">
         <div class="column">
-        <h2 class="heading">It doesn't have to be so hard</h2>
+        <h2 class="heading section-three-heading">It doesn't have to be so hard</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt et dolore mahna aliqua. 
             Ut enim ad minim veniam.</p>
@@ -67,18 +77,18 @@
             Ut enim ad minim veniam.</p>
         </div>
         <div class="column">
-        <div class="subsection-3">
-        <h3 class="heading">Break it down</h3>
+        <div class="subsection">
+        <h3 class="subsection-heading">Break it down</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt et dolore mahna aliqua.</p>
         </div>
-        <div class="subsection-3">
-        <h3 class="heading">Work your way up</h3>
+        <div class="subsection">
+        <h3 class="subsection-heading">Work your way up</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt et dolore mahna aliqua.</p>
         </div>
-        <div class="subsection-3">
-        <h3 class="heading">It'll change your life</h3>
+        <div class="subsection">
+        <h3 class="subsection-heading">It'll change your life</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt et dolore mahna aliqua.</p>
         </div>
