Cleaning up div, section, and class code

--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
                 <ul class="nav-list nav-list-secondary">
                 <li class="nav-item"><a href="#" class="nav-link">Sign In</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">Sign Up</a></li>
-                </ul>
-                </ul>
+                </ul>         
         </nav>
     </header>
 
@@ -41,8 +40,7 @@
         </div>
     </section>
 
-    <section class="section-two">
-        <div class="container">
+    <section class="section-two container row">
         <div class="subsection">
         <h2 class="subsection-heading section-two-heading">Mobile-first</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
@@ -61,10 +59,9 @@
             sed do eiusmod tempor incididunt et dolore mahna aliqua. 
             Ut enim ad minim veniam.</p>
         </div>
-        </div>
     </section>
 
-    <section class="section-three">
+    <main class="section-three">
         <div class="container row">
         <div class="column">
         <h2 class="heading section-three-heading">It doesn't have to be so hard</h2>
@@ -76,25 +73,24 @@
             sed do eiusmod tempor incididunt et dolore mahna aliqua. 
             Ut enim ad minim veniam.</p>
         </div>
-        <div class="column">
-        <div class="subsection">
+
+        <aside class="sidebar subsection column">
         <h3 class="subsection-heading">Break it down</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt et dolore mahna aliqua.</p>
         </div>
-        <div class="subsection">
+        <div class="sidebar subsection">
         <h3 class="subsection-heading">Work your way up</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt et dolore mahna aliqua.</p>
         </div>
-        <div class="subsection">
+        <div class="sidebar subsection">
         <h3 class="subsection-heading">It'll change your life</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt et dolore mahna aliqua.</p>
         </div>
-        </div>
-        </div>
-    </section>
+        </aside>
+    </main>
 
     <footer class="footer-section">
         <div class="container row">
