--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </ul>
                 <ul class="nav-list nav-list-secondary">
                 <li class="nav-item"><a href="#" class="nav-link">Sign In</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Sign Up</a></li>
+                <li class="nav-item"><a href="#" class="nav-link nav-link-button">Sign Up</a></li>
                 </ul>         
         </nav>
     </header>
@@ -132,4 +132,8 @@
         </div>
         </div>  
     </footer>
+
+    <script src="main.js"></script>
+
   </body>
+  </html>
