--- a/index.html
+++ b/index.html
@@ -75,17 +75,17 @@
         </div>
 
         <aside class="sidebar subsection column">
-        <h3 class="subsection-heading">Break it down</h3>
+        <h3 class=" sidebar heading">Break it down</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt et dolore mahna aliqua.</p>
         </div>
         <div class="sidebar subsection">
-        <h3 class="subsection-heading">Work your way up</h3>
+        <h3 class="sidebar heading">Work your way up</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt et dolore mahna aliqua.</p>
         </div>
         <div class="sidebar subsection">
-        <h3 class="subsection-heading">It'll change your life</h3>
+        <h3 class="sidebar heading">It'll change your life</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt et dolore mahna aliqua.</p>
         </div>
