Starting CSS over in a new branch in an effort to streamline the code

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Oswald:wght@700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <header class="main-section">
+    <header class="header">
         <div class="container row">
             <button class="nav-toggle" aria-label="open navigation">
                 <span class="hamburger"></span>
@@ -32,7 +32,7 @@
 
     <section class="hero">
         <div class="container row">
-        <h1 class="heading">Responsive layouts <span>don't have to be a struggle</span></h1>
+        <h1 class="hero-heading">Responsive layouts <span>don't have to be a struggle</span></h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt et dolore mahna aliqua.</p>
         <button>I want to learn</button>
@@ -40,21 +40,21 @@
         </div>
     </section>
 
-    <section class="section-two container row">
-        <div class="subsection">
-        <h2 class="subsection-heading section-two-heading">Mobile-first</h2>
+    <section class="section-two">
+        <div class="container row">
+        <h2>Mobile-first</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt et dolore mahna aliqua. 
             Ut enim ad minim veniam.</p>
         </div>
-        <div class="subsection">
-        <h2 class="subsection-heading section-two-heading">Efficient</h2>
+        <div>
+        <h2>Efficient</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt et dolore mahna aliqua. 
             Ut enim ad minim veniam.</p>
         </div>
-        <div class="subsection">
-        <h2 class="subsection-heading section-two-heading">Done right</h2>
+        <div>
+        <h2>Done right</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt et dolore mahna aliqua. 
             Ut enim ad minim veniam.</p>
@@ -64,7 +64,7 @@
     <main class="section-three">
         <div class="container row">
         <div class="column">
-        <h2 class="heading section-three-heading">It doesn't have to be so hard</h2>
+        <h2 class="">It doesn't have to be so hard</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt et dolore mahna aliqua. 
             Ut enim ad minim veniam.</p>
@@ -92,7 +92,7 @@
         </aside>
     </main>
 
-    <footer class="footer-section">
+    <footer class="footer">
         <div class="container row">
         <div class="column">
         <h4 class="heading footer-main-heading">just scratching the surface</h4>
@@ -104,7 +104,7 @@
         </div>
         <div class="container">
         <div class="column">
-        <h5 class="heading footer-subheading">Getting around</h5>
+        <h5 class="footer-sidebar-heading">Getting around</h5>
         <ul>
             <li>Home</li>
             <li>About</li>
@@ -112,7 +112,7 @@
         </ul>
         </div>
         <div class="column">
-        <h5 class="heading footer-subheading">Other things</h5>
+        <h5 class="footer-sidebar-heading">Other things</h5>
         <ul>
             <li>Lorem ipsum</li>
             <li>dolor</li>
@@ -121,7 +121,7 @@
         </ul>
         </div>
         <div class="column">
-        <h5 class="heading footer-subheading">And more</h5>
+        <h5 class="footer-sidebar-heading">And more</h5>
         <ul>
             <li>Lorem ipsum</li>
             <li>dolor</li>
