Color, typography, and spacing styling

--- a/index.html
+++ b/index.html
@@ -73,19 +73,21 @@
             sed do eiusmod tempor incididunt et dolore mahna aliqua. 
             Ut enim ad minim veniam.</p>
         </div>
+        </div>
 
-        <aside class="sidebar subsection column">
-        <h3 class=" sidebar heading">Break it down</h3>
+        <aside class="column">
+        <div class="sidebar">
+        <h3 class=" sidebar-heading">Break it down</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt et dolore mahna aliqua.</p>
         </div>
-        <div class="sidebar subsection">
-        <h3 class="sidebar heading">Work your way up</h3>
+        <div class="sidebar">
+        <h3 class="sidebar-heading">Work your way up</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt et dolore mahna aliqua.</p>
         </div>
-        <div class="sidebar subsection">
-        <h3 class="sidebar heading">It'll change your life</h3>
+        <div class="sidebar">
+        <h3 class="sidebar-heading">It'll change your life</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt et dolore mahna aliqua.</p>
         </div>
